--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <title>Prova 3D Web</title>
+    <title>Composizioni</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
